# trekyatra

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.wordpress.yml  docker-compose.yml  package.json
services/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py  script.py.mako
services/api/alembic/versions/: 20260421_0001_initial_auth_and_rbac.py  20260421_0002_add_password_hash_to_users.py  20260421_0003_content_domain_foundation.py  20260422_0004_publish_log.py  20260422_0005_agent_runs.py  20260422_0006_brief_versions.py  20260422_0007_draft_claims.py  20260423_0008_master_cms.py  20260423_0009_pipeline.py  20260423_0010_cms_hero_image.py  20260427_0011_leads_newsletter.py  20260427_0012_internal_linking_lead_status.py  20260427_0013_content_refresh.py  20260428_0014_analytics.py  20260428_0015_draft_claims_ymyl.py  20260429_0016_cannibalization_issues.py  20260430_0019_operators.py  (+2 more)
services/api/app/: __init__.py  main.py
services/api/tests/: conftest.py  test_admin.py  test_agent_runs.py  test_agent_triggers.py  test_analytics.py  test_auth.py  test_brief_agent.py  test_cannibalization.py  test_cms.py  test_compliance.py  test_content_routes.py  test_content_writing_agent.py  test_fact_validation.py  test_health.py  test_hubs.py  test_leads_newsletter.py  test_linking.py  test_models.py  test_newsletter_agent.py  test_operators.py  test_pipeline.py  test_publish.py  test_rbac.py  test_refresh.py  test_seo_aeo_agent.py  test_smoke.py  test_treks.py  test_wordpress.py  test_wordpress_full.py  test_worker.py
(+342 files in other folders)
